fix: Prevent overflow on modals (#647)

--- a/packages/design-system/src/custom/_modal.scss
+++ b/packages/design-system/src/custom/_modal.scss
@@ -3,6 +3,7 @@ dialog {
 
   background-color: var(--bs-modal-bg);
   transition: all 0.3s ease allow-discrete;
+  overflow: visible !important;
 
   &.center {
     max-height: 90vh;
